Update LongestSubSequenceWithoutRepeatingCharacters.java